_sass/components/main-nav.scss
@import '../variables/colors.scss';
@import '../variables/typography.scss';

.nav {
  display: flex;
  flex-direction: column;

  &-header {
    background-color: $blueBright;
    color: $white;
    display: none;
    font-family: $fontHeader;
    font-size: $fontSizeMediumSmall;
    font-weight: 600;
    border-bottom: $borderLight;
    margin: 0;
    padding: 1rem;

    @media screen and (min-width: $tablet) {
      display: block;
    }
  }

  &-item {
    padding: 0.5rem 1rem;
  }

  &-item,
  &-subitem {
    font-size: $fontSizeNormal;

    > a {
      color: $black;
      font-weight: normal;

      &:hover {
        color: $blueDark;
        font-weight: 700;
      }
    }

    &:hover {
      background-color: $greyLightest;
    }

    @media screen and (min-width: $tablet) {
      font-size: $fontSizeSmall;
    }
  }

  &-list {
    display: none;
    line-height: 1.5rem;
    list-style: none;
    margin: 0 0 1rem;
    padding: 0;

    @media screen and (min-width: $tablet) {
      display: block;
    }

    > li {
      border-bottom: $borderLight;
    }
  }

  &-subitems {
    list-style-type: '-  ';
    margin: 0;
    padding-left: 1.5rem;
  }

  &-toggle {
    border-radius: 0;
    display: block;
    font-size: $fontSizeNormal;

    @media screen and (min-width: $tablet) {
      display: none;
    }
  }
}

